--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,8 +2,18 @@
 # http://symfony.com/doc/current/book/security.html
 security:
 
+    #encoders:
+        #AppBundle\Entity\User: bcrypt
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+
+
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
+        #fos_userbundle:
+            #id: fos_user.user_provider.username
         in_memory:
             memory: ~
 
@@ -14,6 +24,12 @@ security:
             security: false
 
         main:
+            #pattern: ^/
+            #form_login:
+                #provider: fos_userbundle
+                #csrf_provider: security.csrf.token_manager
+            #logout:       true
+            #anonymous:    true
             anonymous: ~
             # activate different ways to authenticate
 
@@ -22,3 +38,9 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+    #access_control:
+        #- { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/admin/, role: ROLE_ADMIN }
