--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -10,8 +10,9 @@ services:
 #app.slugger:
  #   class: AppBundle\Utils\Slugger
  
- app.twig.database_globals_extension:
-     class: AppBundle\Twig\AppExtension
-     arguments: ["@doctrine.orm.entity_manager"]
-     tags:
-         - { name: twig.extension }
+    app.twig.database_globals_extension:
+        class: AppBundle\Twig\AppExtension
+        arguments:
+            em: "@doctrine.orm.entity_manager"
+        tags:
+            - { name: twig.extension }
