--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,6 +12,6 @@ services:
     app.twig_extension:
         class: AppBundle\Twig\AppExtension
         arguments:
-            em: "@doctrine.orm.entity_manager"
+            doctrine: '@doctrine'
         tags:
             - { name: twig.extension }
