--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -51,3 +51,4 @@ security:
         - { path: ^/register, role: ROLE_USER }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER}
+        - { path: ^/$, roles: ROLE_USER}
