--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -52,3 +52,4 @@ security:
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER}
         - { path: ^/$, roles: ROLE_USER}
+        - { path: ^/*, roles: ROLE_USER}
