--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,7 +46,7 @@ security:
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
     access_control:
-        - { path: ^/camera/newdata/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/camera/newdata/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         #- { path: ^/camera/newdata/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_USER }
