--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,8 +47,8 @@ security:
 
     access_control:
         - { path: ^/camera/newdata/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/UPS/update/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        #- { path: ^/camera/newdata/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_USER }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER}
