--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -49,6 +49,7 @@ security:
         - { path: ^/camera/newdata/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/update/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/status, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/UPS/status/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_USER }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
