Debugging knp snappy option

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,6 +90,6 @@ knp_snappy:
             - { name: 'page-size', value: 'A4' }
             - { name: 'header-left', value: 'Confidential Information' }
             - { name: 'header-center', value: 'Event Control]' }
-            - { name: 'header-line', value: 'true' }
-            - { name: 'footer-center', value: '[page]/[topage]' }
-            - { name: 'footer-line', value: 'true' }
+            #- { name: 'header-line', value: 'true' }
+            #- { name: 'footer-center', value: '[page]/[topage]' }
+            #- { name: 'footer-line', value: 'true' }
