--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,7 +89,7 @@ knp_snappy:
             - { name: 'viewport-size', value: ‘1024x768’ }
             - { name: 'page-size', value: 'A4' }
             - { name: 'header-left', value: 'Confidential Information' }
-            - { name: 'header-center', value: 'Event Control]' }
-            #- { name: 'header-line', value: 'true' }
+            - { name: 'header-right', value: 'Event Control' }
+            - { name: 'header-line', value: true }
             #- { name: 'footer-center', value: '[page]/[topage]' }
             #- { name: 'footer-line', value: 'true' }
