Modified role settings for URLS

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -53,6 +53,7 @@ security:
         - { path: ^/UPS/status/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_USER }
+        - { path: ^/fireregister, role: ROLE_USER }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/event, roles: ROLE_ADMIN}
         - { path: ^/event/*, roles: ROLE_ADMIN}
