--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -56,6 +56,8 @@ security:
         - { path: ^/register, role: ROLE_USER }
         - { path: ^/fireregister, role: ROLE_USER }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user/, roles: ROLE_ADMIN}
+        - { path: ^/user/*, roles: ROLE_ADMIN}
         - { path: ^/event, roles: ROLE_ADMIN}
         - { path: ^/event/*, roles: ROLE_ADMIN}
         - { path: ^/, roles: ROLE_USER}
