Starting file upload system

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    log_files_directory: '%kernel.root_dir%/../media/logFiles'
 
 framework:
     #esi:             ~
