--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -52,15 +52,15 @@ security:
         - { path: ^/UPS/status, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/LED/status, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/status/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/so/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: ROLE_USER }
-        - { path: ^/fireregister, role: ROLE_USER }
+        - { path: ^/register, role: ROLE_USER, requires_channel: https }
+        - { path: ^/fireregister, role: ROLE_USER, requires_channel: https }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/, roles: ROLE_ADMIN}
-        - { path: ^/user/*, roles: ROLE_ADMIN}
+        - { path: ^/user/, roles: ROLE_ADMIN, requires_channel: https }
+        - { path: ^/user/*, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/event, roles: ROLE_ADMIN}
         - { path: ^/event/*, roles: ROLE_ADMIN}
-        - { path: ^/, roles: ROLE_VIEW}
-        - { path: ^/$, roles: ROLE_VIEW}
-        - { path: ^/*, roles: ROLE_VIEW}
+        - { path: ^/, roles: ROLE_VIEW, requires_channel: https }
+        - { path: ^/$, roles: ROLE_VIEW, requires_channel: https }
+        - { path: ^/*, roles: ROLE_VIEW, requires_channel: https }
