--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,6 +29,8 @@ framework:
     trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
+        cookie_lifetime: 7200
+        gc_maxlifetime: 3600
         handler_id:  ~
     fragments:       ~
     http_method_override: true
