--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,6 +9,7 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_USER:      ROLE_VIEW
+        ROLE_FIELD:      ROLE_VIEW
         #ROLE_SUPER_ADMIN: ROLE_ADMIN
 
 
