Adding file upload facility to event for overlays

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
 parameters:
     locale: en
     log_files_directory: '%kernel.root_dir%/../media/logFiles'
+    overlay_director: '%kernel.root_dir%/../media/overlay'
 
 framework:
     #esi:             ~
