--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,3 +111,7 @@ vich_uploader:
         event_overlay:
             uri_prefix:         /media/overlay
             upload_destination: '%kernel.root_dir%/../media/overlay'
+            
+            inject_on_load:     false
+            delete_on_update:   true
+            delete_on_remove:   true
