--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,7 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     form_themes:
-        - 'VichUploaderBundle:Form:fields.html.twig'
+        - '%kernel.root_dir%/../vendor/vich/uploader-bundle/Resources/views/Form/fields.html.twig'
 
 # Assetic Configuration
 assetic:
