--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ parameters:
     locale: en
     log_files_directory: '%kernel.root_dir%/../media/logFiles'
     overlay_directory: '%kernel.root_dir%/../media/overlay'
+    log_support_directory: '%kernel.root_dir%/../media/log_support'
 
 framework:
     #esi:             ~
@@ -111,7 +112,7 @@ vich_uploader:
     
     mappings:
         event_overlay:
-            uri_prefix:         /media/overlay
+            uri_prefix:         /overlay
             upload_destination: '%kernel.root_dir%/../media/overlay'
             
             inject_on_load:     false
@@ -119,9 +120,11 @@ vich_uploader:
             delete_on_remove:   true
             
         log_support_file:
-            uri_prefix:         /media/log_support
+            uri_prefix:         /log_support
             upload_destination: '%kernel.root_dir%/../media/log_support'
             
             inject_on_load:     false
             delete_on_update:   true
             delete_on_remove:   true
+            
+            namer:              vich_uploader.namer_uniqid
