--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,12 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "ircmaxell/password-compat": "^1.0",
-        "knplabs/knp-snappy-bundle": "~1.4"
+        "knplabs/knp-snappy-bundle": "~1.4",
+	"ninsuo/symfony-collection": "~2.0",
+        "vich/uploader-bundle": "^0.14.0",
+        "suncat/mobile-detect-bundle": "^0.10.3"
+
+
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
