--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,6 +44,7 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
         - 'VichUploaderBundle:Form:fields.html.twig'
+        - 'jquery.collection.html.twig'
 
 # Assetic Configuration
 assetic:
