--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "knplabs/knp-snappy-bundle": "~1.4",
 	"ninsuo/symfony-collection": "~2.0",
         "vich/uploader-bundle": "^0.14.0",
-        "suncat/mobile-detect-bundle": "^0.10.3"
+        "suncat/mobile-detect-bundle": "^0.10.3",
+        "components/jqueryui":   "^1.21"
 
 
     },
