--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,7 +12,7 @@ services:
     app.twig_extension:
         class: AppBundle\Twig\AppExtension
         arguments:
-            doctrine: []'@doctrine','@security.token_storage']
+            doctrine: ['@doctrine','@security.token_storage']
 
         tags:
             - { name: twig.extension }
