Modified field user toggle

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -59,6 +59,7 @@ security:
         - { path: ^/fireregister, role: ROLE_USER, requires_channel: https }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/, roles: ROLE_ADMIN, requires_channel: https }
+        - { path: ^/user/fieldUser, roles: ROLE_USER, requires_channel: https }
         - { path: ^/user/*, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/event/weather/radar, roles: ROLE_VIEW }
         - { path: ^/event/weather/, roles: ROLE_VIEW }
