--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -60,11 +60,11 @@ security:
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/user/fieldUser, roles: ROLE_USER, requires_channel: https }
-        - { path: ^/user/*, roles: ROLE_ADMIN, requires_channel: https }
+        - { path: ^/user/*, roles: ROLE_USER, requires_channel: https }
         - { path: ^/event/weather/radar, roles: ROLE_VIEW }
         - { path: ^/event/weather/, roles: ROLE_VIEW }
-        - { path: ^/event, roles: ROLE_ADMIN, requires_channel: https }
-        - { path: ^/event/*, roles: ROLE_ADMIN, requires_channel: https }
+        - { path: ^/event, roles: ROLE_USER, requires_channel: https }
+        - { path: ^/event/*, roles: ROLE_USER, requires_channel: https }
         - { path: ^/, roles: ROLE_VIEW, requires_channel: https }
         - { path: ^/$, roles: ROLE_VIEW, requires_channel: https }
         - { path: ^/*, roles: ROLE_VIEW, requires_channel: https }
