--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_USER:      ROLE_VIEW
-        ROLE_FIELD:      ROLE_VIEW
+        #ROLE_FIELD:      ROLE_VIEW
         #ROLE_SUPER_ADMIN: ROLE_ADMIN
 
 
@@ -58,7 +58,7 @@ security:
         - { path: ^/register, role: ROLE_USER, requires_channel: https }
         - { path: ^/fireregister, role: ROLE_USER, requires_channel: https }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/, roles: ROLE_ADMIN, requires_channel: https }
+        - { path: ^/user/, roles: ROLE_USER, requires_channel: https }
         - { path: ^/user/fieldUser, roles: ROLE_USER, requires_channel: https }
         - { path: ^/user/*, roles: ROLE_USER, requires_channel: https }
         - { path: ^/event/weather/radar, roles: ROLE_VIEW }
