--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -58,7 +58,7 @@ security:
         - { path: ^/register, role: ROLE_USER, requires_channel: https }
         - { path: ^/mySettings/, role: ROLE_USER, requires_channel: https }
         - { path: ^/fireregister, role: ROLE_USER, requires_channel: https }
-        - { path: ^/Alert/*, roles: ROLE_USER, requires_channel: https }
+        - { path: ^/Alert/*, roles: ROLE_VIEW, requires_channel: https }
         #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/fieldUser, roles: ROLE_USER, requires_channel: https }
         - { path: ^/user/, roles: ROLE_ADMIN, requires_channel: https }
@@ -70,7 +70,7 @@ security:
         - { path: ^/map, roles: ROLE_VIEW }
         - { path: ^/mapjsondata, roles: ROLE_VIEW }
         - { path: ^/mapjsondata/*, roles: ROLE_VIEW }
-        - { path: ^/event, roles: ROLE_USER, requires_channel: https }
+        - { path: ^/event, roles: ROLE_VIEW, requires_channel: https }
         - { path: ^/event/edit/*, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/event/delete/*, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/event/new/, roles: ROLE_ADMIN, requires_channel: https }
