--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_USER:      ROLE_VIEW
-        #ROLE_FIELD:      ROLE_VIEW
+        ROLE_FIELD:      ROLE_VIEW
         #ROLE_SUPER_ADMIN: ROLE_ADMIN
 
 
@@ -76,6 +76,8 @@ security:
         - { path: ^/event/new/, roles: ROLE_ADMIN, requires_channel: https }
         - { path: ^/log/*, roles: ROLE_VIEW }
         - { path: ^/log, roles: ROLE_VIEW }
+        - { path: ^/table/*, roles: ROLE_VIEW }
+        - { path: ^/table, roles: ROLE_VIEW }
         - { path: ^/, roles: ROLE_VIEW, requires_channel: https }
         - { path: ^/$, roles: ROLE_VIEW, requires_channel: https }
         - { path: ^/*, roles: ROLE_VIEW, requires_channel: https }
