Addd js debug to pdf creation

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,7 +104,8 @@ knp_snappy:
             - { name: 'enable-javascript', value: true }
             - { name: 'no-stop-slow-scripts', value: true }
             - { name: 'javascript-delay', value: '15000' }
-
+            - { name: 'debug-javascript', value: true }
+            
 mobile_detect:
     redirect:
         mobile: ~
