--- a/composer.json
+++ b/composer.json
@@ -10,25 +10,26 @@
         "php": ">=5.3.9",
         "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
+        "doctrine/doctrine-bundle": "~1.6",
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~4.0",
+        "sensio/distribution-bundle": "5.0.14",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "ircmaxell/password-compat": "^1.0",
         "knplabs/knp-snappy-bundle": "~1.4",
 	"ninsuo/symfony-collection": "~2.0",
-        "vich/uploader-bundle": "^0.14.0",
-        "suncat/mobile-detect-bundle": "^0.10.3",
-        "components/jqueryui":   "~1.11"
+        "vich/uploader-bundle": "^1.4",
+        "suncat/mobile-detect-bundle": "^1.0",
+        "components/jqueryui":   "~1.11",
+        "datatables/datatables": "^1.10"
 
 
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3",
+        "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "~2.7"
     },
     "scripts": {
