--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,7 +11,7 @@ services:
  #   class: AppBundle\Utils\Slugger
     app.twig_extension:
         class: AppBundle\Twig\AppExtension
-        arguments: [@doctrine, @security.token_storage]
+        arguments: ['@doctrine',' @security.token_storage']
 
         tags:
             - { name: twig.extension }
