--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 /web/bundles/
 /app/bootstrap.php.cache
 /app/cache/*
+/var/cache/*
 /app/config/parameters.yml
 /app/logs/*
+/var/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
+!var/logs/.gitkeep
+!var/cache.gitkeep
 /app/phpunit.xml
 /build/
 /vendor/
-/bin/
 /media/
 /composer.phar
 /nbproject/private/
