Added audit logger

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -133,3 +133,37 @@ vich_uploader:
             delete_on_remove:   true
             
             namer:              vich_uploader.namer_uniqid
+    
+xiidea_easy_audit:
+    entity_class : AppBundle\Entity\AuditLog
+    
+    #user property to use as actor of an event
+    #valid value will be any valid property of your user class
+    user_property : ~ # or username                            
+
+    #List of doctrine entity:event you wish to track or set to false to disable logs for doctrine events
+    # valid events are = [created, updated, deleted]
+    doctrine_entities :                                              
+         AppBundle\Entity\log_entries: [created, updated, deleted]
+         AppBundle\Entity\event: [created, updated, deleted]
+         AppBundle\Entity\general_log: [created, updated, deleted]
+         AppBundle\Entity\medical_log: [created, updated, deleted]
+         AppBundle\Entity\security_log: [created, updated, deleted]
+         AppBundle\Entity\lost_property: [created, updated, deleted]
+         AppBundle\Entity\event_control_register: [created, updated, deleted]
+         
+
+    #List all events you want to track  (Optional from v1.2.1 you can now use subscriber to define it)
+    events :                                                   #Optional
+        - security.interactive_login
+
+    #List all custom resolver for event
+    #custom_resolvers :
+    #       security.interactive_login : user.event_resolver
+    #       security.authentication.failure : user.event_resolver
+
+    #logger_channel:
+    #    xiidea.easy_audit.logger.service: ["info", "debug"]
+    #    file.logger: ["!info", "!debug"]
+
+    #Custom Event Resolver Service
