--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "vich/uploader-bundle": "^1.4",
         "suncat/mobile-detect-bundle": "^1.0",
         "components/jqueryui":   "~1.11",
-        "datatables/datatables": "^1.10"
-
+        "datatables/datatables": "^1.10",
+        "xiidea/easy-audit": "1.4.*@dev"
 
     },
     "require-dev": {
