--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@
 /composer.phar
 /nbproject/private/
 /.idea/
-app/Resources/views/SecurityForm.twig
+/app/Resources/views/SecurityForm.html.twig
+/app/Resources/views/copyright.html.twig
