--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,8 +14,8 @@ parameters:
 framework:
     #esi:             ~
     #
-    #translator:      { fallbacks: ["%locale%"] }
-    translator: ~
+    translator:      { fallbacks: ["%locale%"] }
+    #translator: ~
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
