--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "components/jqueryui":   "~1.11",
         "datatables/datatables": "^1.10",
         "xiidea/easy-audit": "1.4.*@dev",
-        "richsage/rms-push-notifications-bundle": "dev-master"
+        "richsage/rms-push-notifications-bundle": "dev-master",
+        "dzunke/slack-bundle": "dev-master"
 
     },
     "require-dev": {
