--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,11 @@ parameters:
 #    parameter_name: value
 
 services:
+     doctrine.alert_listener:
+        class: AppBundle\Entity\AlertListener
+        arguments: []
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
