--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,11 +4,11 @@ parameters:
 #    parameter_name: value
 
 services:
-     doctrine.alert_listener:
-        class: AppBundle\Entity\AlertListener
-        arguments: []
-        tags:
-            - { name: doctrine.event_listener, event: prePersist }
+	doctrine.alert_listener:
+		class: AppBundle\Entity\AlertListener
+		arguments: []
+		tags:
+            - { name: doctrine.alert_listener, event: prePersist }
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
@@ -20,3 +20,4 @@ services:
 
         tags:
             - { name: twig.extension }
+
