--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,7 +8,7 @@ services:
         class: AppBundle\Entity\AlertListener
         arguments: []
         tags:
-            - { name: doctrine.alert_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: prePersist }
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
