--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,6 +44,10 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
         - 'VichUploaderBundle:Form:fields.html.twig'
+    globals:
+        gmapsKey: "%gmaps.APIkey%"
+        weatherUser: "%RainToday.username%"
+        weatherPass: "%RainToday.password%"
 
 # Assetic Configuration
 assetic:
