Added skew function

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -51,6 +51,7 @@ security:
         - { path: ^/peoplecounting/slack_occupancy/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/camera_count/newdata/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/venue/event/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/venue/skew/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/update/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/status, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/LED/status, roles: IS_AUTHENTICATED_ANONYMOUSLY }
