Added firebase to composer

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "datatables/datatables": "^1.10",
         "xiidea/easy-audit": "1.4.*@dev",
         "richsage/rms-push-notifications-bundle": "dev-master",
-        "dzunke/slack-bundle": "dev-master"
+        "dzunke/slack-bundle": "dev-master",
+        "kreait/firebase-php": "^3.0"
 
     },
     "require-dev": {
