debugging firebase registration

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -50,7 +50,8 @@ security:
     access_control:
         - { path: ^/peoplecounting/slack_occupancy/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/camera_count/newdata/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/venue/event/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/venue/event/*, roles: IS_AUTHENTICATED_ANONYMOUSLY } 
+        - { path: ^/firebase/register/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/venue/skew/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/update/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/UPS/status, roles: IS_AUTHENTICATED_ANONYMOUSLY }
