--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -185,3 +185,7 @@ d_zunke_slack:
 
 redjan_ym_fcm:
     firebase_api_key: "%firebase%"
+    
+jp_firebase_notification:
+    firebase_fcm:
+        server_key: "%firebase%"
