--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -6,9 +6,10 @@ parameters:
 services:
     doctrine.alert_listener:
         class: AppBundle\Entity\AlertListener
-        arguments: ['@dz.slack.client', '@dz.slack.identity_bag', '@doctrine.orm.entity_manager']
+        arguments: ['@dz.slack.client', '@dz.slack.identity_bag']
         tags:
            - { name: doctrine.event_listener, event: prePersist }
+           - { name: doctrine.orm.entity_listener, lazy: true }
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
