--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,6 +11,12 @@ services:
         tags:
            - { name: doctrine.event_listener, event: prePersist }
            
+    doctrine.log_listener:
+        class: AppBundle\Entity\LogListener
+        arguments: ['@dz.slack.client', '@dz.slack.identity_bag', '@service_container']
+        tags:
+           - { name: doctrine.event_listener, event: postPersist }
+           
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
