--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,6 +16,7 @@ services:
         arguments: ['@dz.slack.client', '@dz.slack.identity_bag', '@service_container']
         tags:
            - { name: doctrine.event_listener, event: postPersist }
+           - { name: doctrine.event_listener, event: postUpdate }
            
 #    service_name:
 #        class: AppBundle\Directory\ClassName
