--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -3,14 +3,14 @@
 parameters:
 #    parameter_name: value
 
-services:
-    app.form_login_authenticator:
-        class: AppBundle\Security\FormLoginAuthenticator
-        arguments: ["@service_container"]
+#services:
+#    app.form_login_authenticator:
+#        class: AppBundle\Security\FormLoginAuthenticator
+#        arguments: ["@service_container"]
         
-    app.api_token_authenticator:
-        class: AppBundle\Security\ApiTokenAuthenticator
-        arguments: ["@doctrine.orm.entity_manager"]
+#    app.api_token_authenticator:
+#        class: AppBundle\Security\ApiTokenAuthenticator
+#        arguments: ["@doctrine.orm.entity_manager"]
         
     doctrine.alert_listener:
         class: AppBundle\Entity\AlertListener
