--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,18 +31,18 @@ security:
         main:
             anonymous: ~
             pattern: ^/
-            #form_login:
-            #    login_path: login
-            #    check_path: login
+            form_login:
+                login_path: login
+                check_path: login
             logout:
                 path:   /logout
                 target: /
                 
-            guard:
-                authenticators:
-                    - app.form_login_authenticator
-                    - app.api_token_authenticator
-                entry_point: app.form_login_authenticator
+            #guard:
+            #    authenticators:
+            #        - app.form_login_authenticator
+            #        - app.api_token_authenticator
+            #    entry_point: app.form_login_authenticator
             #logout:       true
             #anonymous:    true
             # activate different ways to authenticate
