--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -51,6 +51,8 @@ twig:
         gmapsKey: "%gmaps_apikey%"
         weatherUser: "%raintoday_username%"
         weatherPass: "%raintoday_password%"
+    date:
+        timezone: Europe/London
 
 # Assetic Configuration
 assetic:
